--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
    }
     #logo:after {
-      content:"dreamdealer";
+      content:"ozpin";
       position: absolute;
       left: 8px;
       top: 32px;
