--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         </a>
       </li>
       <li>
-        <a href="other-links">
+        <a href="more">
           <span>
-            Other Links
+            More
           </span>
         </a>
       </li>
