--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       letter-spacing: -3px;
       line-height: 1;
       text-shadow: #EDEDED 3px 2px 0;
-      position: relative;
+      position: center;
    }
     #logo:after {
       content:"ozpin";
-      position: absolute;
+      position: center;
       left: 8px;
       top: 32px;
     }
@@ -40,14 +40,14 @@
       margin: 10px 0 0 0; padding: 25px 10px;
       border-top: 4px double #AAA;
       border-bottom: 4px double #AAA;
-      position: relative;
+      position: center;
       text-align: center;
     }
     #menu li {
       display: inline-block;
       width: 173px;
       margin: 0 10px;
-      position: relative;
+      position: center;
       -webkit-transform: skewy(-3deg);
       -webkit-backface-visibility: hidden;
       -webkit-transition: 200ms all;
@@ -63,7 +63,7 @@
       font-size: 35px;
       text-align: center;
       text-decoration: none;
-      position: relative;
+      position: center;
       z-index: 1;
       text-shadow: 
             1px 1px 0px #FFF, 
@@ -92,7 +92,7 @@
     #menu li:after,
     #menu li:before {
       content: '';
-      position: absolute;
+      position: center;
       width: 50px;
       height: 100%;
       background: #BBB;
