--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       letter-spacing: -3px;
       line-height: 1;
       text-shadow: #EDEDED 3px 2px 0;
-      position: center;
+      position: relative;
    }
     #logo:after {
       content:"ozpin";
-      position: center;
+      position: absolute;
       left: 8px;
       top: 32px;
     }
@@ -40,14 +40,14 @@
       margin: 10px 0 0 0; padding: 25px 10px;
       border-top: 4px double #AAA;
       border-bottom: 4px double #AAA;
-      position: center;
+      position: relative;
       text-align: center;
     }
     #menu li {
       display: inline-block;
       width: 173px;
       margin: 0 10px;
-      position: center;
+      position: relative;
       -webkit-transform: skewy(-3deg);
       -webkit-backface-visibility: hidden;
       -webkit-transition: 200ms all;
@@ -61,7 +61,7 @@
       padding: 2px 10px;
       color: #333;
       font-size: 35px;
-      text-align: center;
+      text-align: relative;
       text-decoration: none;
       position: center;
       z-index: 1;
@@ -92,7 +92,7 @@
     #menu li:after,
     #menu li:before {
       content: '';
-      position: center;
+      position: absolute;
       width: 50px;
       height: 100%;
       background: #BBB;
