--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       font-size: 35px;
       text-align: relative;
       text-decoration: none;
-      position: center;
+      position: relative;
       z-index: 1;
       text-shadow: 
             1px 1px 0px #FFF, 
