--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       line-height: 1;
       text-shadow: #EDEDED 3px 2px 0;
       position: relative;
-      left: 292
+      left: 300px
    }
     #logo:after {
       content:"ozpin";
       position: absolute;
-      left: 300px;
+      left: 8px;
       top: 32px;
     }
     #logo:after {
