--- a/index.html
+++ b/index.html
@@ -117,41 +117,11 @@
   <div id="header">
     <a href="/" id="logo">Ozpin</a>
     <ul id="menu">
-      <li>
-        <a href="https://discord.gg/rm8evmu">
-          <span>
-            Discord
-          </span>
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/ethan_universe">
-          <span>
-            Twitter
-          </span>
-        </a>
-      </li>
-      <li>
-        <a href="about">
-          <span>
-            About
-          </span>
-        </a>
-      </li>
-      <li>
-        <a href="https://youtube.com/c/EthanUniverseEntertainment">
-          <span>
-            Youtube
-          </span>
-        </a>
-      </li>
-      <li>
-        <a href="more">
-          <span>
-            More
-          </span>
-        </a>
-      </li>
+      <li><a href="about"><span>About</span></a></li>
+      <li><a href="https://discord.gg/rm8evmu"><span>Discord</span></a></li>
+      <li><a href="https://twitter.com/ethan_universe"><span>Twitter</span></a></li>
+      <li><a href="https://youtube.com/c/EthanUniverseEntertainment"><span>Youtube</span></a></li>
+      <li><a href="more"><span>More</span></a></li>
     </ul>
   </div>
 </body>
