--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       color: #555;
       text-decoration: none;
       text-transform: uppercase;
+      text-align: center;
       font-size: 150px;
       font-weight: 800;
       letter-spacing: -3px;
       line-height: 1;
       text-shadow: #EDEDED 3px 2px 0;
       position: relative;
-      left: 600px
    }
     #logo:after {
       content:"ozpin";
