--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head>
+  <title>Ozpin | Home</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,700,300);
     @import url(https://fonts.googleapis.com/css?family=Squada+One);
@@ -114,7 +116,9 @@
 </head>
 <body>
   <div id="header">
-    <a href="/" id="logo">Ozpin</a>
+    <center>
+      <a href="/" id="logo">Ozpin</a>
+    </center>
     <ul id="menu">
       <li><a href="about"><span>About</span></a></li>
       <li><a href="https://discord.gg/rm8evmu"><span>Discord</span></a></li>
