--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
   <title>Ozpin | Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <meta name="description" content="A cool place for cool Ozpins to do cool stuff... yeah!" />
+    <meta charset="utf-8">
   <style>
     @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,700,300);
     @import url(https://fonts.googleapis.com/css?family=Squada+One);
