--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Ozpin | Home</title>
+  <title>josh was here</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <meta name="description" content="A cool place for cool Ozpins to do cool stuff... yeah!" />
   <meta charset="utf-8">
