--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <meta name="description" content="A cool place for cool Ozpins to do cool stuff... yeah!" />
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="../main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
   <div id="header">
