--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
   <title>Ozpin | Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="random/main.css"
   <meta name="description" content="A cool place for cool Ozpins to do cool stuff... yeah!" />
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="random/main.css">
 </head>
 <body>
   <div id="header">
