--- a/404.html
+++ b/404.html
@@ -1,6 +1,2 @@
-OH NO!!
-
-You have just landed in someone else's house when trying to navigate to one of Ozpin's open-houses!
-Quick! Leave the scene before you're spotted and arrested for burglary!!
-
-<a href="/">OK!</a>
+<meta http-equiv="refresh" content="0; URL='http://ozpin.club/'" />
+<p>Oops, you landed somewhere that doesn't exist. If you aren't redirected click <a href="http://ozpin.club/">here</a> to travel back to the homepage!</p>
