--- a/404.html
+++ b/404.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; URL='http://ozpin.club/'" />
+<script>window.location.replace("http://ozpin.club");<script>
 <p>Oops, you landed somewhere that doesn't exist. If you aren't redirected click <a href="http://ozpin.club/">here</a> to travel back to the homepage!</p>
