--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
   <title>Ozpin | About</title>
   <title>Ozpin | Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="..scripts-and-styles/main.css" />
+  <link rel="stylesheet" type="text/css" href=".scripts-and-styles/main.css" />
 </head>
 <body>
   <div id="header">
