--- a/pages/about.html
+++ b/pages/about.html
@@ -8,11 +8,11 @@
   <div id="header">
     <center><a href="/" id="logo">Ozpin</a></center>
     <ul id="menu">
-      <li><a href="pages/about"><span>About</span></a></li>
+      <li><a href="/"><span>Return</span></a></li>
       <li><a href="https://discord.gg/rm8evmu"><span>Discord</span></a></li>
       <li><a href="https://twitter.com/ethan_universe"><span>Twitter</span></a></li>
       <li><a href="https://youtube.com/c/EthanUniverseEntertainment"><span>Youtube</span></a></li>
-      <li><a href="pages/more"><span>More</span></a></li>
+      <li><a href="more"><span>More</span></a></li>
     </ul>
   </div>
   <div id="content">
