--- a/index.html
+++ b/index.html
@@ -18,4 +18,10 @@
       <li><a href="pages/more"><span>More</span></a></li>
     </ul>
   </div>
+  <div id="content">
+    <p></p>
+    <center>
+      <h2>Complete Site Coming Soon!</h2>
+    </center>
+  </div>
 </body>
