--- a/pages/more.html
+++ b/pages/more.html
@@ -17,7 +17,7 @@
   </div>
   <div>
     <ul id="menu2">
-      <li><a href="https://scripterscf.com"><span>ScriptersCF</span></a></li>
+      <li><a href="https://scripterscf.com"><span>SCF Web</span></a></li>
       <li><a href="https://archiveofourown.org/users/SquidgyTV"><span>A03</span></a></li>
       <li><a href="riskdice"><span>Risk Dice</span></a></li>
     </ul>
