--- a/pages/more.html
+++ b/pages/more.html
@@ -20,6 +20,8 @@
       <li><a href="https://scripterscf.com"><span>SCF Web</span></a></li>
       <li><a href="https://archiveofourown.org/users/SquidgyTV"><span>A03</span></a></li>
       <li><a href="riskdice"><span>Risk Dice</span></a></li>
+      <li><a href="anime"><span>Top Anime</span></a></li>
+      <li><a href="rwby"><span>RWBY</span></a></li>
     </ul>
   </div>
   <div id="content">
