--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </center>
     <ul id="menu">
       <li><a href="pages/about"><span>About</span></a></li>
-      <li><a href="https://discord.gg/rm8evmu"><span>Discord</span></a></li>
+      <li><a href="https://discord.gg/h6aGW2d"><span>Discord</span></a></li>
       <li><a href="https://twitter.com/ethan_universe"><span>Twitter</span></a></li>
       <li><a href="https://youtube.com/c/EthanUniverseEntertainment"><span>Youtube</span></a></li>
       <li><a href="pages/more"><span>More</span></a></li>
