--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
     <center><a href="/" id="logo">Ozpin</a></center>
     <ul id="menu">
       <li><a href="/"><span>Return</span></a></li>
-      <li><a href="https://discord.gg/rm8evmu"><span>Discord</span></a></li>
+      <li><a href="https://discord.gg/h6aGW2d"><span>Discord</span></a></li>
       <li><a href="https://twitter.com/ethan_universe"><span>Twitter</span></a></li>
       <li><a href="https://youtube.com/c/EthanUniverseEntertainment"><span>Youtube</span></a></li>
       <li><a href="more"><span>More</span></a></li>
