--- a/404.html
+++ b/404.html
@@ -1,2 +1,33 @@
-<meta http-equiv="refresh" content="0; URL='http://ozpin.club/'" />
-<p>Oops, you landed somewhere that doesn't exist. If you aren't redirected click <a href="http://ozpin.club/">here</a> to travel back to the homepage!</p>
+<head>
+  <title>Ozpin | 404</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="scripts-and-styles/main.css" />
+  <style>
+    image {
+      position: relative;
+    }
+    404 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
+</head>
+<body>
+  <div id="header">
+    <center>
+      <a href="/" id="logo">Ozpin</a>
+    </center>
+    <ul id="menu">
+      <li><a href="pages/about"><span>About</span></a></li>
+      <li><a href="https://discord.gg/h6aGW2d"><span>Discord</span></a></li>
+      <li><a href="https://twitter.com/ethan_universe"><span>Twitter</span></a></li>
+      <li><a href="https://youtube.com/c/EthanUniverseEntertainment"><span>Youtube</span></a></li>
+      <li><a href="pages/more"><span>More</span></a></li>
+    </ul>
+  </div>
+  <div id="image">
+    <center><img src="images/404.png" alt="404" id="404" /></center>
+  </div>
+</body>
