--- a/404.html
+++ b/404.html
@@ -2,17 +2,7 @@
   <title>Ozpin | 404</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="scripts-and-styles/main.css" />
-  <style>
-    image {
-      position: relative;
-    }
-    404 {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="scripts-and-styles/404.css />
 </head>
 <body>
   <div id="header">
@@ -28,6 +18,6 @@
     </ul>
   </div>
   <div id="image">
-    <center><img src="images/404.png" alt="404" id="404" /></center>
+    <center><img src="images/404.png" alt="404" id="image2" /></center>
   </div>
 </body>
