--- a/404.html
+++ b/404.html
@@ -18,6 +18,6 @@
     </ul>
   </div>
   <div id="image">
-    <center><img src="images/404.png" alt="404" id="image2" /></center>
+    <center><img src="images/404.png" id="image2" /></center>
   </div>
 </body>
