--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
   <title>Ozpin | 404</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="scripts-and-styles/main.css" />
-  <link rel="stylesheet" type="text/css" href="scripts-and-styles/404.css />
+  <link rel="stylesheet" type="text/css" href="scripts-and-styles/404.css" />
 </head>
 <body>
   <div id="header">
