--- a/404.html
+++ b/404.html
@@ -1,15 +1,23 @@
 <head>
   <title>Ozpin | 404</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="scripts-and-styles/main.css" />
-  <link rel="stylesheet" type="text/css" href="scripts-and-styles/404.css" />
+  <style>
+    body {
+      padding: 20px 80px;
+      background: #eee url(https://subtlepatterns.com/patterns/extra_clean_paper.png);
+    }
+    image {
+      position: relative;
+    }
+    image2 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 <body>
-  <div id="header">
-    <center>
-      <a href="/" id="logo">Ozpin</a>
-    </center>
-  </div>
   <div id="image">
     <center><img src="images/404.png" id="image2" /></center>
   </div>
