--- a/404.html
+++ b/404.html
@@ -6,19 +6,14 @@
       padding: 20px 80px;
       background: #eee url(https://subtlepatterns.com/patterns/extra_clean_paper.png);
     }
-    image {
-      position: relative;
-    }
-    image2 {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
   </style>
 </head>
 <body>
   <div id="image">
-    <center><img src="images/404.png" id="image2" /></center>
+    <center><img
+      src="/images/404.png"
+      alt="Error 404 :("
+      style="width:422px;height:500px;position:absolute;top:50%;left:50%;margin-top:-212px;margin-left:-211px;"
+    ></center>
   </div>
 </body>
