--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <body>
   <div id="image">
     <center><img
-      src="/images/404.png"
+      src="../images/404.png"
       alt="Error 404 :("
       style="width:422px;height:500px;position:absolute;top:50%;left:50%;margin-top:-212px;margin-left:-211px;"
     ></center>
