--- a/pages/more.html
+++ b/pages/more.html
@@ -19,7 +19,7 @@
     <ul id="menu2">
       <li><a href="https://scripterscf.com"><span>SCF Web</span></a></li>
       <li><a href="https://archiveofourown.org/users/SquidgyTV"><span>A03</span></a></li>
-      <li><a href="riskdice"><span>Risk Dice</span></a></li>
+      <li><a href="https://www.roblox.com/games/1526388416"><span>Risk Dice</span></a></li>
       <li><a href="anime"><span>Top Anime</span></a></li>
       <li><a href="rwby"><span>RWBY</span></a></li>
     </ul>
