--- a/pages/more.html
+++ b/pages/more.html
@@ -25,9 +25,6 @@
     </ul>
   </div>
   <div id="content">
-    <h3>More Ozpin!</h3>
-    <p>If you wish to contact me you can always DM me through Discord at Ozpin Au Bellona#3331</p>
-    <p>Alternatively you can email me for business or more pressing matters at ethanhuniverse@gmail.com</p>
-    <p>For matters relating to the ScriptersCF website, email me at ethan@scripterscf.com</p>
+    <iframe src="http://challonge.com/jsvp1czz/module?theme=2" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
   </div>
 </body>
