--- a/pages/more.html
+++ b/pages/more.html
@@ -26,11 +26,7 @@
   </div>
   <div id="content">
     <h3>Noob League:</h3>
-    <p>Supreme Champion: 	JoshSCF</p>
-    <p>Worthy Adversary: 	SquidgyTV</p>
-    <p> Maybe Next Time: 	InfinityEffect</p>
-    <p>       4th place: 	Oryxide</p>
-    <h3>Decent League:</h3>
+    <iframe src="https://challonge.com/m9y420o0/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
     <iframe src="http://challonge.com/9ahp254f/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
   </div>
 </body>
