--- a/pages/more.html
+++ b/pages/more.html
@@ -27,6 +27,7 @@
   <div id="content">
     <h3>Noob League:</h3>
     <iframe src="https://challonge.com/m9y420o0/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+    <h3>Decent League:</h3>
     <iframe src="http://challonge.com/9ahp254f/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
   </div>
 </body>
