--- a/pages/more.html
+++ b/pages/more.html
@@ -20,14 +20,12 @@
       <li><a href="https://scripterscf.com"><span>SCF Web</span></a></li>
       <li><a href="https://archiveofourown.org/users/SquidgyTV"><span>A03</span></a></li>
       <li><a href="https://www.roblox.com/games/1526388416"><span>Risk Dice</span></a></li>
-      <li><a href="anime"><span>Top Anime</span></a></li>
+      <li><a href="tourn"><span>Tournaments</span></a></li>
       <li><a href="rwby"><span>RWBY</span></a></li>
     </ul>
   </div>
   <div id="content">
-    <h3>Noob League:</h3>
-    <iframe src="https://challonge.com/m9y420o0/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-    <h3>Decent League:</h3>
-    <iframe src="http://challonge.com/9ahp254f/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+    <h3>More Ozpin!</h3>
+    <p>So you want more Ozpin? Well you can't have him he's all mine. *pout*</p>
   </div>
 </body>
