--- a/pages/more.html
+++ b/pages/more.html
@@ -20,7 +20,7 @@
       <li><a href="https://scripterscf.com"><span>SCF Web</span></a></li>
       <li><a href="https://archiveofourown.org/users/SquidgyTV"><span>A03</span></a></li>
       <li><a href="https://www.roblox.com/games/1526388416"><span>Risk Dice</span></a></li>
-      <li><a href="tourn"><span>Tournaments</span></a></li>
+      <li><a href="tourn"><span>Tourneys</span></a></li>
       <li><a href="rwby"><span>RWBY</span></a></li>
     </ul>
   </div>
