--- a/pages/tourn.html
+++ b/pages/tourn.html
@@ -12,7 +12,7 @@
       <li><a href="https://discord.gg/h6aGW2d"><span>Discord</span></a></li>
       <li><a href="https://twitter.com/ethan_universe"><span>Twitter</span></a></li>
       <li><a href="https://youtube.com/c/EthanUniverseEntertainment"><span>Youtube</span></a></li>
-      <li><a href="/more"><span>Return</span></a></li>
+      <li><a href="./more"><span>Return</span></a></li>
     </ul>
   </div>
   <div id="content">
