--- a/pages/tourn.html
+++ b/pages/tourn.html
@@ -17,7 +17,7 @@
   </div>
   <div id="content">
     <h3>Cool Tournament:<h3>
-    <p>Coming soon!</p>
+    <iframe src="https://challonge.com/fortnitefags/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
     <h3>Noob League:</h3>
     <iframe src="https://challonge.com/m9y420o0/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
     <h3>Decent League:</h3>
