--- a/pages/tourn.html
+++ b/pages/tourn.html
@@ -19,8 +19,12 @@
     <h3>Cool Tournament:<h3>
     <iframe src="https://challonge.com/fortnitefrags/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
     <h3>Noob League:</h3>
-    <iframe src="https://challonge.com/m9y420o0/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+    <iframe src="https://challonge.com/ff_noob_league/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
     <h3>Decent League:</h3>
-    <iframe src="https://challonge.com/9ahp254f/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+    <iframe src="https://challonge.com/ff_decent_league/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+    <h3>Semi - Pro League:</h3>
+    <iframe src="https://challonge.com/ff_semipro_league/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+    <h3>Pro League:</h3>
+    <iframe src="https://challonge.com/ff_pro_league/module?theme=1" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
   </div>
 </body>
