--- a/pages/tourn.html
+++ b/pages/tourn.html
@@ -1,8 +1,7 @@
 <head>
-  <title>Ozpin | More</title>
+  <title>Ozpin | Tournaments</title>
   <link rel="icon" href="../favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="../scripts-and-styles/main.css" />
-  <link rel="stylesheet" type="text/css" href="../scripts-and-styles/more.css" />
 </head>
 <body>
   <div id="header">
