--- a/pages/more.html
+++ b/pages/more.html
@@ -21,7 +21,7 @@
       <li><a href="https://archiveofourown.org/users/SquidgyTV"><span>A03</span></a></li>
       <li><a href="https://www.roblox.com/games/1526388416"><span>Risk Dice</span></a></li>
       <li><a href="tourn"><span>Tourneys</span></a></li>
-      <li><a href="rwby"><span>RWBY</span></a></li>
+      <li><a href="tokens"><span>Tokens</span></a></li>
     </ul>
   </div>
   <div id="content">
