--- a/pages/rwby.html
+++ b/pages/rwby.html
@@ -2,7 +2,6 @@
   <title>Ozpin | RWBY</title>
   <link rel="icon" href="../favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="../scripts-and-styles/main.css" />
-  <link rel="stylesheet" type="text/css" href="../scripts-and-styles/more.css" />
 </head>
 <body>
   <div id="header">
@@ -17,18 +16,8 @@
       <li><a href="more"><span>More</span></a></li>
     </ul>
   </div>
-  <div>
-    <ul id="menu2">
-      <li><a href="/"><span>Vol 1</span></a></li>
-      <li><a href="/"><span>Vol 2</span></a></li>
-      <li><a href="/"><span>Vol 3</span></a></li>
-      <li><a href="/"><span>Vol 4</span></a></li>
-      <li><a href="/"><span>Vol 5</span></a></li>
-      <li><a href="/"><span>Soundtrack</span></a></li>
-  </div>
   <div id="content">
-    <h4>RWBY:</h4>
-    <p>Here you can find links to all five volumes of RWBY.</p>
-    <p>Each playlist has a complete set of episodes including the 'World of Remnant' videos.</p>
+    <h4>Srs Leaderboard:</h4>
+    <iframe src='https://aleaderboard.com/w2/09f51ef1-02f2-4a33-9beb-c3f9746cef19' width='100%' height='600px' class='eventWidget'></iframe>
   </div>
 </body>
