--- a/pages/tokens.html
+++ b/pages/tokens.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Ozpin | RWBY</title>
+  <title>Ozpin | SrS Tokens</title>
   <link rel="icon" href="../favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="../scripts-and-styles/main.css" />
 </head>
